--- a/index.html
+++ b/index.html
@@ -22,11 +22,39 @@
     </style>
   </head>
   <body>
-    <!-- About
-  Careers
-  Events
-  Products
-  Support
+    <div class="h-wrapper">
+      <header class="header">
+        <a
+          href="#"
+          class="header__logo"
+          aria-label="Go to Loopstudio Homepage"
+        ></a>
+        <nav class="header__nav">
+          <span class="header-menu">
+            <a href="#" class="header-nav-link">About</a>
+          </span>
+          <span class="header-menu">
+            <a href="#" class="header-nav-link">Careers</a>
+          </span>
+          <span class="header-menu">
+            <a href="#" class="header-nav-link">Events</a>
+          </span>
+          <span class="header-menu">
+            <a href="#" class="header-nav-link">Products</a>
+          </span>
+          <span class="header-menu">
+            <a href="#" class="header-nav-link">Support</a>
+          </span>
+        </nav>
+        <button class="header__hamburger">
+          <span></span>
+        </button>
+      </header>
+    </div>
+
+    <script src="./script.js"></script>
+
+    <!-- 
 
   Immersive experiences that deliver
 
