navbar mobile styling && minor fixes

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
         font-size: 11px;
         text-align: center;
       }
+
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
     </style>
   </head>
+
   <body>
     <div class="h-wrapper">
       <header class="header">
         <a
           href="#"
           class="header__logo"
-          aria-label="Go to Loopstudio Homepage"
+          aria-label="Go to Loopstudios Homepage"
         ></a>
         <nav class="header__nav">
           <span class="header-menu">
@@ -50,6 +52,25 @@
           <span></span>
         </button>
       </header>
+      <div class="modal">
+        <ul class="modal__mobile-container">
+          <li class="header-menu">
+            <a href="#" class="new-section-link">About</a>
+          </li>
+          <li class="header-menu">
+            <a href="#" class="new-section-link">Careers</a>
+          </li>
+          <li class="header-menu">
+            <a href="#" class="new-section-link">Events</a>
+          </li>
+          <li class="header-menu">
+            <a href="#" class="new-section-link">Products</a>
+          </li>
+          <li class="header-menu">
+            <a href="#" class="new-section-link">Support</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <script src="./script.js"></script>
