--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
           </li>
         </ul>
       </div>
+      <div class="viewport">
+        <section class="hero">
+          <div class="hero__container">
+            <div class="content-container">
+              <div class="text-container">
+                <h1>Immersive experiences that deliver</h1>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
 
     <script src="./script.js"></script>
