--- a/index.html
+++ b/index.html
@@ -81,6 +81,34 @@
             </div>
           </div>
         </section>
+        <section class="article">
+          <div class="article__container">
+            <div class="article__img-container">
+              <img
+                src="./assets/mobile/image-interactive.jpg"
+                alt=""
+                class="mobile-img"
+              />
+              <img
+                src="./assets/desktop/image-interactive.jpg"
+                alt=""
+                class="desktop-img"
+              />
+            </div>
+            <div class="content-container">
+              <div class="text-content">
+                <h2>THE LEADER IN INTERACTIVE VR</h2>
+                <p>
+                  Founded in 2011, Loopstudios has been producing world-class
+                  virtual reality projects for some of the best companies around
+                  the globe. Our award-winning creations have transformed
+                  businesses through digital experiences that bind to their
+                  brand.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
 
