showcase && responsive layout

--- a/index.html
+++ b/index.html
@@ -109,6 +109,168 @@
             </div>
           </div>
         </section>
+        <section class="showcase">
+          <div class="showcase__container">
+            <div class="showcase__header-title">
+              <h2>OUR CREATIONS</h2>
+              <a href="#" class="button button--inverse">SEE ALL</a>
+            </div>
+            <div class="l-grid">
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-deep-earth.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-deep-earth.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label">
+                    <h3>DEEP EARTH</h3>
+                  </div>
+                </a>
+              </div>
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-night-arcade.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-night-arcade.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label">
+                    <h3>NIGHT ARCADE</h3>
+                  </div>
+                </a>
+              </div>
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-soccer-team.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-soccer-team.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label">
+                    <h3>SOCCER TEAM VR</h3>
+                  </div>
+                </a>
+              </div>
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-grid.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-grid.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label card__title-label--wrap">
+                    <h3>THE GRID</h3>
+                  </div>
+                </a>
+              </div>
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-from-above.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-from-above.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label">
+                    <h3>FROM UP ABOVE VR</h3>
+                  </div>
+                </a>
+              </div>
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-pocket-borealis.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-pocket-borealis.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label">
+                    <h3>POCKET BOREALIS</h3>
+                  </div>
+                </a>
+              </div>
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-curiosity.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-curiosity.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label">
+                    <h3>THE CURIOSITY</h3>
+                  </div>
+                </a>
+              </div>
+              <div class="card">
+                <a href="#" class="card__link-container">
+                  <div class="card__img-container">
+                    <img
+                      src="./assets/desktop/image-fisheye.jpg"
+                      alt="card img"
+                      class="card-desktop-img"
+                    />
+                    <img
+                      src="./assets/mobile/image-fisheye.jpg"
+                      alt="card img"
+                      class="card-mobile-img"
+                    />
+                  </div>
+                  <div class="card__title-label">
+                    <h3>MAKE IT FISHEYE</h3>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
 
