footer && minor changes

--- a/index.html
+++ b/index.html
@@ -272,34 +272,37 @@
           </div>
         </section>
       </div>
+      <footer class="footer">
+        <div class="footer__container">
+          <div class="f-right">
+            <div class="footer__logo">
+              <img src="./assets/logo.svg" alt="logo" />
+            </div>
+            <div class="footer__links">
+              <span class="header-menu">
+                <a href="#" class="header-nav-link">About</a>
+              </span>
+              <span class="header-menu">
+                <a href="#" class="header-nav-link">Careers</a>
+              </span>
+              <span class="header-menu">
+                <a href="#" class="header-nav-link">Events</a>
+              </span>
+              <span class="header-menu">
+                <a href="#" class="header-nav-link">Products</a>
+              </span>
+              <span class="header-menu">
+                <a href="#" class="header-nav-link">Support</a>
+              </span>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="./script.js"></script>
 
     <!-- 
-
-  Immersive experiences that deliver
-
-  The leader in interactive VR
-
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
-
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
   About
   Careers
   Events
@@ -307,10 +310,6 @@
   Support
 
   © 2021 Loopstudios. All rights reserved.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    -->
   </body>
 </html>
