footer styling && css update

--- a/index.html
+++ b/index.html
@@ -275,9 +275,11 @@
       <footer class="footer">
         <div class="footer__container">
           <div class="f-right">
-            <div class="footer__logo">
-              <img src="./assets/logo.svg" alt="logo" />
-            </div>
+            <a
+              href="#"
+              class="footer__logo"
+              aria-label="Go to Loopstudios Homepage"
+            ></a>
             <div class="footer__links">
               <span class="header-menu">
                 <a href="#" class="header-nav-link">About</a>
@@ -296,20 +298,31 @@
               </span>
             </div>
           </div>
+          <div class="f-left">
+            <div class="footer__social">
+              <a href="#">
+                <img src="./assets/icon-facebook.svg" alt="facebook" />
+              </a>
+              <a href="#">
+                <img src="./assets/icon-twitter.svg" alt="twitter" />
+              </a>
+              <a href="#">
+                <img src="./assets/icon-pinterest.svg" alt="pinterest" />
+              </a>
+              <a href="#">
+                <img src="./assets/icon-instagram.svg" alt="instagram" />
+              </a>
+            </div>
+            <div class="footer__copyright">
+              <span class="copyright-text">
+                © 2021 Loopstudios. All rights reserved.
+              </span>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
 
     <script src="./script.js"></script>
-
-    <!-- 
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
-    -->
   </body>
 </html>
