--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="showcase__container">
             <div class="showcase__header-title">
               <h2>OUR CREATIONS</h2>
-              <a href="#" class="button button--inverse">SEE ALL</a>
+              <a href="#" class="button">SEE ALL</a>
             </div>
             <div class="l-grid">
               <div class="card">
