--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div class="h-wrapper">
+    <main class="h-wrapper">
       <header class="header">
         <a
           href="#"
@@ -321,7 +321,7 @@
           </div>
         </div>
       </footer>
-    </div>
+    </main>
 
     <script src="./script.js"></script>
   </body>
